--- a/.gitignore
+++ b/.gitignore
@@ -247,6 +247,14 @@ orleans.codegen.cs
 # Since there are multiple workflows, uncomment next line to ignore bower_components
 # (https://github.com/github/gitignore/pull/1529#issuecomment-104372622)
 #bower_components/
+# appsettings
+appsettings.json
+appsettings.Development.json
+appsettings.*.json
+
+# local dev settings
+**/launchSettings.json
+
 
 # RIA/Silverlight projects
 Generated_Code/
