AppDbContext ve Vonfiguration nesneleri de oluşturuldu ayrıca migration tam bu versiyonda alındı.

--- a/FilmKirala.Application/FilmKirala.Application.csproj
+++ b/FilmKirala.Application/FilmKirala.Application.csproj
@@ -14,4 +14,8 @@
     <ProjectReference Include="..\FilmKirala.Domain\FilmKirala.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\" />
+  </ItemGroup>
+
 </Project>
