Code Refactor+ postman ile endpoint testleri ve validatorler ile birliklte daha düzgün hata mesajları ve performans iyileştirmeleri

--- a/FilmKirala.Application/FilmKirala.Application.csproj
+++ b/FilmKirala.Application/FilmKirala.Application.csproj
@@ -8,16 +8,13 @@
 
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+    <PackageReference Include="FluentValidation" Version="11.11.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration" Version="10.0.0" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.15.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\FilmKirala.Domain\FilmKirala.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Validators\" />
   </ItemGroup>
 
 </Project>
